--- a/js/dark-mode/dark-mode.css
+++ b/js/dark-mode/dark-mode.css
@@ -20,3 +20,14 @@ body {
 .caption {
   color: #ccc;
 }
+
+.lera-box {
+  background-color: #2c2c2c;
+  border-color: #aa4c8f;
+  color: #fce4ec;
+}
+
+.lera-title {
+  color: #f8bbd0;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.4);
+}
