--- a/css/style.css
+++ b/css/style.css
@@ -101,3 +101,14 @@ h1 {
   background-color: #fce4ec;
   margin-top: 20px;
 }
+
+.game-button {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.card.big {
+  display: inline-block;
+  padding: 15px 40px;
+  font-size: 20px;
+}
